--- a/q/274342.html
+++ b/q/274342.html
@@ -26,14 +26,20 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>050</td><td>Charcoal</td><td>240723T215243Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274374#274374">Neil</a></td></tr>
-<tr d-ix="1"><td>035</td><td>05AB1E</td><td>240723T130521Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274351#274351">Kevin Cr</a></td></tr>
-<tr d-ix="2"><td>080</td><td>JavaScript Node.js</td><td>240723T100159Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274347#274347">l4m2</a></td></tr>
-<tr d-ix="3"><td>071</td><td>Perl 5 p</td><td>240723T093221Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274345#274345">ovs</a></td></tr>
-<tr d-ix="4"><td>053</td><td>Retina 0.8.2</td><td>240723T094301Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274346#274346">Neil</a></td></tr>
-<tr d-ix="5"><td>137</td><td>Python 3.8 prerelease</td><td>240723T091424Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274343#274343">Jitse</a></td></tr>
+<tr d-ix="0"><td>193</td><td>Setanta</td><td>240723T223355Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274376#274376">bb94</a></td></tr>
+<tr d-ix="1"><td>050</td><td>Charcoal</td><td>240723T215243Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274374#274374">Neil</a></td></tr>
+<tr d-ix="2"><td>035</td><td>05AB1E</td><td>240723T130521Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274351#274351">Kevin Cr</a></td></tr>
+<tr d-ix="3"><td>080</td><td>JavaScript Node.js</td><td>240723T100159Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274347#274347">l4m2</a></td></tr>
+<tr d-ix="4"><td>071</td><td>Perl 5 p</td><td>240723T093221Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274345#274345">ovs</a></td></tr>
+<tr d-ix="5"><td>053</td><td>Retina 0.8.2</td><td>240723T094301Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274346#274346">Neil</a></td></tr>
+<tr d-ix="6"><td>137</td><td>Python 3.8 prerelease</td><td>240723T091424Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274343#274343">Jitse</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 50 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://try-setanta.ie" rel="nofollow noreferrer">Setanta</a>, 193 bytes</h1>
+<pre><code>gniomh(s,m){s=roinn@s(&quot;|&quot;)t:=s[1]s=s[0]le i idir(0,fad@m){i=m[i]u:=fad@s ma i==&quot;&lt;&quot;&amp;u{t=s[-1]+t s=cuid@s(0,u-1)}ma i==&quot;&gt;&quot;&amp;fad@t{s+=t[0]t=cuid@t(1,fad@t)}ma i==&quot;#&quot; s=cuid@s(0,u-1)}toradh s+&quot;|&quot;+t}
+</code></pre>
+<p><a href="https://try-setanta.ie/editor/EhEKBlNjcmlwdBCAgICw1-6bCw" rel="nofollow noreferrer">Try on try-setanta.ie</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 50 bytes</h1>
 <pre><code>≔⪪Ｓ¹θＦ⁺×&lt;⌕⮌θ|⁺#Ｓ≡ι&lt;«¿θ⊞υ⊟θ»&gt;«¿υ⊞θ⊟υ»≔∧θ⊟θηＦθι|Ｗυ⊟υ
 </code></pre>
 <p><a href="https://tio.run/##VY/PasMwDMbP8VMI56JAdti1KYVeCruVtS9gUqcWePknuz2sfXZPSZqxCRtZ5sf3faqdGevO@JT2zHRt8dR7CvjR9jGcwkjtFYsS3uUORaWabgQ8@sh4pi/LqLe6hAO1F/y0NzuyxUFI/dCFtJnTuRD/1KRUxncKtQOkAr5VVhu2IFqbacioAZGBY2SHUWS6XkYxz54ruftDxhc5LGRcyYttTPRhA6@99hJy@FUrwQn3XBaazCRbkDSVWl7TCpW6O/J2sZh/V4OUzo4Y5BgIlsND5dup8rl26e3mfwA" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation:</p>
@@ -56,7 +62,7 @@
 </code></pre>
 <p>Reconstitute the string from the lists.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 35 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 35 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>vā&lt;VÐ'|kDy'&gt;Q·&lt;+‚YÃUžuyåiXèë'|æ}RXǝ
 </code></pre>
 <p>Inputs in the order <span class="math-container">\$moves,string\$</span>.</p>
@@ -86,13 +92,13 @@
                   # (after the loop, the result is output implicitly)
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 80 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 80 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>g=(x,[c,...d])=&gt;c?g(x.replace(/(.?)\|(.?)/,c&lt;g?'|$2':c&gt;'='?'$1$2|':'|$1$2'),d):x
 </code></pre>
 <p><a href="https://tio.run/##HYjBCsMgEAV/JRBhVzCG5hii/kRvbQ@yEZsSYohSPPjvNunwGB7zsV8b6Vj21G1hdrV6hVk8SEgp5xdXmozHLA@3r5Yc9igNf5bLvaDJGyhsgJE0KDDAbmwoMJ7tPMDFzMdcKWwxrE6uwaNHuL@X2JyzTXIxFRDQThftHw2c1x8" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a> <code>-p</code>, 71 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a> <code>-p</code>, 71 bytes</h1>
 
 <pre class="lang-perl prettyprint-override"><code>%C=qw(&lt; (.)\|/|$1/ &gt; \|(.)/$1|/ # .\|/|/);eval join&quot;;s/&quot;,@C{&lt;&gt;=~/^|./g}
 </code></pre>
@@ -103,7 +109,7 @@
 </code></pre>
 <p><a href="https://tio.run/##VY1BCsIwEEX3OcXQRtoubFBw1TQI9QguuwkYtBDamkRdOHp049gu1McsHvzPn9E4u4lx0dTnWy7Bi7zIy6JFUOQtkkNKVrZYVDypM8FXyNeiyipz1TbZNnep6qfgWIrjI4lxf@o80GkIxgdkqfyQTijWXJzHwYHpD1PO1C9yLlDuMWgX5or8oiTbGWuCAW0tbf@hqMCQFumbeg1j6Ibex@Vo3w" rel="nofollow noreferrer" title="Perl 5 – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="noreferrer">Retina 0.8.2</a>, 53 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="noreferrer">Retina 0.8.2</a>, 53 bytes</h1>
 <pre><code>+`\|(.?)(.*&#9;)&gt;|(.?)\|(.*&#9;)&lt;|.?\|(.*&#9;)#
 $1|$2$3$4$5
 &#9;
@@ -111,7 +117,7 @@ $1|$2$3$4$5
 </code></pre>
 <p><a href="https://tio.run/##VY29CsMwDIRn6ykM9pC0YOjfZpShfYSOHWqooAGTgu1sendXcQptPzScdMcpURmnUOv2fuPODX3nNqrHJpeDLJ7d8JEG7I7t3h7s0Z5AQa3X55i1TNCFcmFl/IJpIJznlPmVNE2P5iv8xa8B8TOXkMoa8V/Qw4UiFdIhRun@AyUALI3yDd8" rel="noreferrer" title="Retina 0.8.2 – Try It Online">Try it online!</a> Link includes test cases. Takes input separated by tabs (normally would have used newlines but that makes writing a test suite harder). Explanation: The replacement stage simply shuffles the <code>|</code> around depending on the next operation, with the <code>+</code> prefix repeating until no more operations remain, then finally the tab is deleted.</p>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, 137 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, 137 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>f=lambda s,n=0,*m:n and f([(x:=s[:(c:=s.find('|'))and~-c])+'|'+s[c-1:c]+s[c+1:],0,s[:c]+s[c+1:c+2]+'|'+s[c+2:],x+s[c:]][ord(n)%4],*m)or s
 </code></pre>
