--- a/q/274350.html
+++ b/q/274350.html
@@ -26,31 +26,30 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>015</td><td></td><td>240723T213211Z</td><td><a href="https://codegolf.stackexchange.com/questions/274350/golfscript-many-items-rotation/274372#274372">noodle p</a></td></tr>
-<tr d-ix="1"><td>022</td><td>22 bytes</td><td>240723T163728Z</td><td><a href="https://codegolf.stackexchange.com/questions/274350/golfscript-many-items-rotation/274362#274362">Styleurc</a></td></tr>
+<tr d-ix="0"><td>019</td><td></td><td>240723T163728Z</td><td><a href="https://codegolf.stackexchange.com/questions/274350/golfscript-many-items-rotation/274362#274362">Styleurc</a></td></tr>
+<tr d-ix="1"><td>015</td><td></td><td>240723T213211Z</td><td><a href="https://codegolf.stackexchange.com/questions/274350/golfscript-many-items-rotation/274372#274372">noodle p</a></td></tr>
 <tr d-ix="2"><td>024</td><td>24 bytes</td><td>240723T153830Z</td><td><a href="https://codegolf.stackexchange.com/questions/274350/golfscript-many-items-rotation/274361#274361">ovs</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><s>16</s> 15 bytes</h1>
+<div id="pu0" class="pu"><h1><s>22</s> 19 bytes</h1>
+<pre><code>])~1$1$&lt;@@&gt;[(](\++~
+</code></pre>
+<p><a href="https://tio.run/##S8/PSStOLsosKPlvraCUmJSckpqmZKhfp2CioKCskJlXUFpS/D9Ws85QxVDFxsHBLlojViNGW7vuf2zCfwA" rel="nofollow noreferrer" title="GolfScript – Try It Online">Try it online!</a></p>
+<p>explanation:</p>
+<pre><code>])     # Separate the stack and the argument
+~      # NOT the argument
+1$1$   # Duplicate the stack and argument so there are two of each, alternating
+&lt;      # Objects under the index
+@@&gt;    # Objects at or above the index
+[(](\  # Move the object at the index to the top, in a list
+++~    # Concatenate and unpack everything
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><s>16</s> 15 bytes</h1>
 <pre><code>~].)&lt;\)&gt;(:x;+~x
 </code></pre>
 <p><a href="https://tio.run/##S8/PSStOLsosKPlvbaBgqGCkYKxgomCqYMZl8r8u1ipR0yZR007DqsJau67if2y1uoJ6rf5/AA" rel="nofollow noreferrer" title="GolfScript – Try It Online">Try it online!</a></p>
 <p>Based on ovs's solution, but instead of separating N from the stack and assigning each to a variable, I do the <code>~</code> before collecting the stack into an array, and just use this array with <code>)</code>.</p>
 <p>Previously this solution assigned the array to the variable <code>a</code>, but ovs suggested to instead use <code>.</code> and <code>\</code>, which is a byte shorter.</p>
-</div>
-<div id="pu1" class="pu"><h1>22 bytes</h1>
-<p>I made it shorter</p>
-<pre><code>])~{1$}4*&lt;@@)&gt;+@@[=]+~
-</code></pre>
-<p><a href="https://tio.run/##S8/PSStOLsosKPlvraCUmJSckpqmZKhfp2CioKCskJlXUFpS/D9Ws67aUKXWRMvGwUHTTtvBIdo2Vrvuf2zBfwA" rel="nofollow noreferrer" title="GolfScript – Try It Online">Try it online!</a></p>
-<p>explanation:</p>
-<pre><code>])     # Separate the stack and the argument
-~      # NOT the argument
-{1$}4* # Duplicate the stack and argument so there are three of each, alternating
-&lt;      # Objects under the index
-@@)&gt;+  # Add the objects above the index
-@@[=]+ # Add the object at the index
-~      # Unpack everything
-</code></pre>
 </div>
 <div id="pu2" class="pu"><h1>24 bytes</h1>
 <p>there is still plenty of room to golf this further, but I think this version shows the idea well.</p>
