--- a/q/274342.html
+++ b/q/274342.html
@@ -26,35 +26,66 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>093</td><td>Python</td><td>240724T062044Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274386#274386">Albert.L</a></td></tr>
-<tr d-ix="1"><td>100</td><td>Python</td><td>240724T043605Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274385#274385">Mukundan</a></td></tr>
-<tr d-ix="2"><td>193</td><td>Setanta</td><td>240723T223355Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274376#274376">bb94</a></td></tr>
-<tr d-ix="3"><td>050</td><td>Charcoal</td><td>240723T215243Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274374#274374">Neil</a></td></tr>
-<tr d-ix="4"><td>035</td><td>05AB1E</td><td>240723T130521Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274351#274351">Kevin Cr</a></td></tr>
+<tr d-ix="0"><td>034</td><td>05AB1E</td><td>240723T130521Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274351#274351">Kevin Cr</a></td></tr>
+<tr d-ix="1"><td>093</td><td>Python</td><td>240724T062044Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274386#274386">Albert.L</a></td></tr>
+<tr d-ix="2"><td>100</td><td>Python</td><td>240724T043605Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274385#274385">Mukundan</a></td></tr>
+<tr d-ix="3"><td>193</td><td>Setanta</td><td>240723T223355Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274376#274376">bb94</a></td></tr>
+<tr d-ix="4"><td>050</td><td>Charcoal</td><td>240723T215243Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274374#274374">Neil</a></td></tr>
 <tr d-ix="5"><td>080</td><td>JavaScript Node.js</td><td>240723T100159Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274347#274347">l4m2</a></td></tr>
 <tr d-ix="6"><td>071</td><td>Perl 5 p</td><td>240723T093221Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274345#274345">ovs</a></td></tr>
 <tr d-ix="7"><td>053</td><td>Retina 0.8.2</td><td>240723T094301Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274346#274346">Neil</a></td></tr>
 <tr d-ix="8"><td>137</td><td>Python 3.8 prerelease</td><td>240723T091424Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274343#274343">Jitse</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 93 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <s>35</s> 34 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<pre><code>Çvā&lt;VÐ'|kDy61.S+‚YÃUy₆›iXèë'|æ}RXǝ
+</code></pre>
+<p>Inputs in the order <span class="math-container">\$moves,string\$</span>.</p>
+<p><a href="https://tio.run/##yy9OTMpM/f//cHvZkUabsMMT1GuyXSrNDPWCtR81zIo83Bxa@aip7VHDrsyIwysOr1avObysNiji@Nz//5VtQEAZDOxs4EBZmSskI7NYAYgSFUpSi0tqAA" rel="nofollow noreferrer">Try it online</a> or <a href="https://tio.run/##yy9OTMpM/V9Waa@k8KhtkoKSfWXC/8PtZUcabcIOT1CvyXapNDPUC9Z@1DAr8nBzaOWjprZHDbsyIw6vOLxavebwstqgiONz/9fq/I@OVgrJyCxWAKJEhZLU4pIaJR0lZRsQUAYDO6VYHYVoJefSouKa/CKF1LwUsDKgKjtkYIOkDqisuKYksagEptIGAexsIOpcUnNSS1IVEnNywBaiADugOoiqGrA1NnBXEHAqwhplZaXYWAA" rel="nofollow noreferrer">verify all test cases</a> or <a href="https://tio.run/##yy9OTMpM/f//cHvZkUabsMMT1GuyXSrNDPWCtR81zIo83Bxa@aip7VHDrsyIwysOr1avObysNiji@Fzb//@VbUBAGQzsbOBAWZkrJCOzWAGIEhVKUotLagA" rel="nofollow noreferrer">see all intermediate steps by adding a trailing <code>=</code></a>.</p>
+<p><strong>Explanation:</strong></p>
+
+<pre class="lang-python prettyprint-override"><code>Ç                 # Convert the first (implicit) input-moves to a list of codepoint-integers
+ v                # Pop and loop over each codepoint `y`:
+  ā               #  Push a list in the range [1,length] (without popping)
+                  #  (using the implicit second input-string in the first iteration)
+   &lt;              #  Decrease it to 0-based range [0,length)
+    V             #  Pop and store it in variable `Y`
+  Ð               #  Triplicate the current string
+   '|k           '#  Pop one, and get the (0-based) index of &quot;|&quot;
+      D           #  Duplicate this index
+       y61.S      #  Compare the current codepoint `y` with 61
+                  #  (1 if &gt;61 and -1 if &lt;61: &quot;&gt;&quot; is 1 and &quot;&lt;&quot;/&quot;#&quot; are -1)
+            +     #  Add that to the duplicated index
+             ‚    #  Pair the two together
+              YÃ  #  Only keep indices that are in range based on `Y`
+                U #  Pop and store this pair (or singleton) in variable `X`
+  y₆›i            #  If `y` is an arrow (codepoint &gt; 36):
+      Xè          #   Get the character(s) of the string at index/indices `X`
+     ë            #  Else:
+      '|æ        '#   Push pair [&quot;&quot;,&quot;|&quot;] (powerset of &quot;|&quot;)
+     }R           #  After the if-else statement: Reverse the pair
+       Xǝ         #  Insert it/them at index/indices `X` back into the string
+                  # (after the loop, the result is output implicitly)
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 93 bytes</h1>
 <pre class="lang-python prettyprint-override"><code>lambda s,c:[s:=re.sub((2*&quot;((\.|))&quot;)[i&lt;&quot;=&quot;::2],r&quot;\2&quot;+r&quot;\1&quot;*(i&gt;&quot;#&quot;),s)for i in c][-1]
 import re
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=VY5BboMwEEX3nGJkFrFTghpWEQJv2hNU3QGqHGKUkcBYtllUYt9DdBOpau-U23QIldp-2bOZp__m_cu-hvNoLh9dWX9Oodsdrk2vhuNJgU_avPJ56XTqpyPn2ZZxXqezEExUWLCS5XnWJI7VGbujuWdbjpLFTCRedKMDBDTQNtVu30Q42NEFcPpH8rQAPRq9MKPVht-LPAKSviQtlDAoy31wKX20yQKmzioXMOBo-AY2QhBtHZrAO06nCrE2X65vz2f0QE9B0D7MEBdL4ltk9DA5P5Ncm9NtD_JvihWgvZ8D-Vak-I0sokfd66BB9T11_4skIJqpkWxyvecb" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>Inspired by other regex based answers.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 100 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 100 bytes</h1>
 <pre class="lang-python prettyprint-override"><code>lambda s,o:[[s.pop(j:=s.index('|')),j&gt;0==i^35and s.pop(j-1),s.insert(max(0,j+i%5-1),'|')]for i in o]
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=XZDNSsNAFIXXyVMMU6QzmoYWKUhJAkURBBeC3aURopmQCelkyNxChbyJm27qO3Xjk7hwfqJWDyGQc75zc2fe3uUrVK3YH0oUo_VhC-Xk6lg0-ea5yJEK2kWaqlC2ktSLWIVcFGxHxv2Y0qBOpnHMny7nuSjQwExmNDCUYh2QTb4j06C-4Gdz45tWVrYd4ogL1GbDvz6M1XDBrCuZIFO68JEWFzJAbCf1YiYPOwUdl4SGSjYcCF7DJEGYWlYFuqs0qUtDPl7DOEAzl7tQv8NhiO_sLWg7PVeZ_SyJNuykkImXtmCEurrsuACS4tvl3T0OEH5YPj7iLMU4rFsuTIuiODbLZjo9cak75f74uaq4QvrJETAFveeNIqORVeJ5-iyrKu9N6l9vO9Xra2H6Zg3tJaeKHG2gE6b3B0P1kHfgetGvksi2-m_qB_JvWMOAobxp9Fbe6I8S3bQ132SeXiSy27pZ_lK0ULHOzOnhf9fIYuAu4Qs" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>Modifies the input in-place</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://try-setanta.ie" rel="nofollow noreferrer">Setanta</a>, 193 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://try-setanta.ie" rel="nofollow noreferrer">Setanta</a>, 193 bytes</h1>
 <pre><code>gniomh(s,m){s=roinn@s(&quot;|&quot;)t:=s[1]s=s[0]le i idir(0,fad@m){i=m[i]u:=fad@s ma i==&quot;&lt;&quot;&amp;u{t=s[-1]+t s=cuid@s(0,u-1)}ma i==&quot;&gt;&quot;&amp;fad@t{s+=t[0]t=cuid@t(1,fad@t)}ma i==&quot;#&quot; s=cuid@s(0,u-1)}toradh s+&quot;|&quot;+t}
 </code></pre>
 <p><a href="https://try-setanta.ie/editor/EhEKBlNjcmlwdBCAgICw1-6bCw" rel="nofollow noreferrer">Try on try-setanta.ie</a></p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 50 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 50 bytes</h1>
 <pre><code>≔⪪Ｓ¹θＦ⁺×&lt;⌕⮌θ|⁺#Ｓ≡ι&lt;«¿θ⊞υ⊟θ»&gt;«¿υ⊞θ⊟υ»≔∧θ⊟θηＦθι|Ｗυ⊟υ
 </code></pre>
 <p><a href="https://tio.run/##VY/PasMwDMbP8VMI56JAdti1KYVeCruVtS9gUqcWePknuz2sfXZPSZqxCRtZ5sf3faqdGevO@JT2zHRt8dR7CvjR9jGcwkjtFYsS3uUORaWabgQ8@sh4pi/LqLe6hAO1F/y0NzuyxUFI/dCFtJnTuRD/1KRUxncKtQOkAr5VVhu2IFqbacioAZGBY2SHUWS6XkYxz54ruftDxhc5LGRcyYttTPRhA6@99hJy@FUrwQn3XBaazCRbkDSVWl7TCpW6O/J2sZh/V4OUzo4Y5BgIlsND5dup8rl26e3mfwA" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation:</p>
@@ -76,36 +107,6 @@ import re
 <pre><code>Ｆθι|Ｗυ⊟υ
 </code></pre>
 <p>Reconstitute the string from the lists.</p>
-</div>
-<div id="pu4" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 35 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
-<pre><code>vā&lt;VÐ'|kDy'&gt;Q·&lt;+‚YÃUžuyåiXèë'|æ}RXǝ
-</code></pre>
-<p>Inputs in the order <span class="math-container">\$moves,string\$</span>.</p>
-<p><a href="https://tio.run/##yy9OTMpM/f@/7EijTdjhCeo12S6V6naBh7bbaD9qmBV5uDn06L7SysNLMyMOrzi8Wr3m8LLaoIjjc///V7YBAWUwsLOBA2VlrpCMzGIFIEpUKEktLqkBAA" rel="nofollow noreferrer">Try it online</a> or <a href="https://tio.run/##yy9OTMpM/V9Waa@k8KhtkoKSfWXC/7IjjTZhhyeo12S7VKrbBR7abqP9qGFW5OHm0KP7SisPL82MOLzi8Gr1msPLaoMijs/9X6vzPzpaKSQjs1gBiBIVSlKLS2qUdJSUbUBAGQzslGJ1FKKVnEuLimvyixRS81LAyoCq7JCBDZI6oLLimpLEohKYShsEsLOBqHNJzUktSVVIzMkBW4gC7IDqIKpqwNbYwF1BwKkIa5SVlWJjAQ" rel="nofollow noreferrer">verify all test cases</a> or <a href="https://tio.run/##yy9OTMpM/f@/7EijTdjhCeo12S6V6naBh7bbaD9qmBV5uDn06L7SysNLMyMOrzi8Wr3m8LLaoIjjc23//1e2AQFlMLCzgQNlZa6QjMxiBSBKVChJLS6pAQA" rel="nofollow noreferrer">see all intermediate steps by adding a trailing <code>=</code></a>.</p>
-<p><strong>Explanation:</strong></p>
-
-<pre class="lang-python prettyprint-override"><code>v                 # Loop over each character `y` of the first (implicit) input-moves:
- ā                #  Push a list in the range [1,length] (without popping)
-                  #  (using the implicit second input-string in the first iteration)
-  &lt;               #  Decrease it to 0-based range [0,length)
-   V              #  Pop and store it in variable `Y`
- Ð                #  Triplicate the current string
-  '|k            '#  Pop one, and get the (0-based) index of &quot;|&quot;
-     D            #  Duplicate this index
-      y'&gt;Q       '#  Check if `y` is equal to &quot;&gt;&quot;
-          ·&lt;      #  Double and decrease by 1 (&quot;&gt;&quot; is 1; &quot;&lt;&quot; and &quot;#&quot; are -1)
-            +     #  Add that to the duplicated index
-             ‚    #  Pair the two together
-              YÃ  #  Only keep indices that are in range based on `Y`
-                U #  Pop and store this pair (or singleton) in variable `X`
-  žuyåi           #  If `y` is an arrow (substring of constant &quot;()&lt;&gt;[]{}&quot;):
-       Xè         #   Get the character(s) of the string at index/indices `X`
-      ë           #  Else:
-       '|æ       '#   Push pair [&quot;&quot;,&quot;|&quot;] (powerset of &quot;|&quot;)
-      }R          #  After the if-else statement: Reverse the pair
-        Xǝ        #  Insert it/them at index/indices `X` back into the string
-                  # (after the loop, the result is output implicitly)
-</code></pre>
 </div>
 <div id="pu5" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 80 bytes</h1>
 
