--- a/q/274389.html
+++ b/q/274389.html
@@ -26,9 +26,28 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>045</td><td>JavaScript ES6</td><td>240724T081140Z</td><td><a href="https://codegolf.stackexchange.com/questions/274389/reduce-a-string-up-to-idempotency/274391#274391">Arnauld</a></td></tr>
+<tr d-ix="0"><td>008</td><td>05AB1E legacy</td><td>240724T083148Z</td><td><a href="https://codegolf.stackexchange.com/questions/274389/reduce-a-string-up-to-idempotency/274393#274393">Kevin Cr</a></td></tr>
+<tr d-ix="1"><td>045</td><td>JavaScript ES6</td><td>240724T081140Z</td><td><a href="https://codegolf.stackexchange.com/questions/274389/reduce-a-string-up-to-idempotency/274391#274391">Arnauld</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>JavaScript (ES6), 45 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands/2649a799300cbf3770e2db37ce177d4a19035a25" rel="nofollow noreferrer">05AB1E (legacy)</a>, 8 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<pre><code>Δ.œ€ÔJéн
+</code></pre>
+<p><a href="https://tio.run/##ASMA3P8wNWFiMWX//86ULsWT4oKsw5RKw6nQvf//MTEuMCsxKzFlMQ" rel="nofollow noreferrer">Try it online</a> or <a href="https://tio.run/##MzBNTDJM/V9Waa@k8KhtkoKSfaXS/3NT9I5OftS05vAUr8MrL@z9r6QXpvM/WklJR6kChMFEJZBQVLQHktr62vpAylAbCMG0EZiuq6sDkiEZqUCUC2SVZKSWQFjJ/qHpGUA6wjPCMcIRyPCEsyJAZhtaWhgYmwARkK2np6cIwggmyEr//GxFIAYxbfLtbPLz7UDaDPUMQG5INVSKBQA" rel="nofollow noreferrer">verify all test cases</a>.</p>
+<p><strong>Explanation:</strong></p>
+
+<pre class="lang-python prettyprint-override"><code>Δ         # Loop until the result no longer changes:
+ .œ       #  Get all partitions of the current string
+          #  (which will use the implicit input-string in the first iteration)
+   €      #  Map over each partition:
+    Ô     #   Connected uniquify all parts in this partition
+     J    #  Join each connected uniquified partition back together
+      é   #  Sort these strings by length (shortest to longest)
+       н  #  Pop and keep the first/shortest one
+          # (after the loop, the result is output implicitly)
+</code></pre>
+<p>Uses the <a href="https://github.com/Adriandmen/05AB1E/wiki/Commands/2649a799300cbf3770e2db37ce177d4a19035a25" rel="nofollow noreferrer">legacy version of 05AB1E</a> instead of the <a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">latest version</a>, since the connected uniquify builtin <code>Ô</code> will interpret stringified numbers as numbers instead of strings. E.g. with input <code>11.0+1+1e1</code>, the legacy program correctly connected uniqifies <code>[&quot;1&quot;,&quot;1&quot;,&quot;.0&quot;,&quot;+1&quot;,&quot;+1&quot;,&quot;e1&quot;]</code> to <code>[&quot;1&quot;,&quot;.0&quot;,&quot;+1&quot;,&quot;e1&quot;]</code> → <code>&quot;1.0+1e1&quot;</code>, whereas the new version of 05AB1E will connected uniquify <code>[&quot;1&quot;,&quot;1.0&quot;,&quot;+1&quot;,&quot;+1e1&quot;]</code> to <code>[&quot;1&quot;]</code> → <code>&quot;1&quot;</code>, since it interprets them all as the same number (<code>1</code>): <a href="https://tio.run/##ASMA3P9vc2FiaWX//86ULsWT4oKsw5RKw6nQvf//MTEuMCsxKzFlMQ" rel="nofollow noreferrer">try it online</a>.</p>
+</div>
+<div id="pu1" class="pu"><h1>JavaScript (ES6), 45 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>f=s=&gt;s==(s=s.replace(/(.+)(?=\1)/,&quot;&quot;))?s:f(s)
 </code></pre>
