--- a/q/274389.html
+++ b/q/274389.html
@@ -26,10 +26,25 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>008</td><td>05AB1E legacy</td><td>240724T083148Z</td><td><a href="https://codegolf.stackexchange.com/questions/274389/reduce-a-string-up-to-idempotency/274393#274393">Kevin Cr</a></td></tr>
-<tr d-ix="1"><td>045</td><td>JavaScript ES6</td><td>240724T081140Z</td><td><a href="https://codegolf.stackexchange.com/questions/274389/reduce-a-string-up-to-idempotency/274391#274391">Arnauld</a></td></tr>
+<tr d-ix="0"><td>043</td><td>JavaScript ES6</td><td>240724T081140Z</td><td><a href="https://codegolf.stackexchange.com/questions/274389/reduce-a-string-up-to-idempotency/274391#274391">Arnauld</a></td></tr>
+<tr d-ix="1"><td>009</td><td>QuadR</td><td>240724T085533Z</td><td><a href="https://codegolf.stackexchange.com/questions/274389/reduce-a-string-up-to-idempotency/274394#274394">Ad&#225;</a></td></tr>
+<tr d-ix="2"><td>008</td><td>05AB1E legacy</td><td>240724T083148Z</td><td><a href="https://codegolf.stackexchange.com/questions/274389/reduce-a-string-up-to-idempotency/274393#274393">Kevin Cr</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands/2649a799300cbf3770e2db37ce177d4a19035a25" rel="nofollow noreferrer">05AB1E (legacy)</a>, 8 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu0" class="pu"><h1>JavaScript (ES6), 43 bytes</h1>
+<p><em>-2 thanks to <a href="https://codegolf.stackexchange.com/users/76323/l4m2">@l4m2</a></em></p>
+
+<pre class="lang-javascript prettyprint-override"><code>f=s=&gt;s==(s=s.replace(/(.+)\1/,&quot;$1&quot;))?s:f(s)
+</code></pre>
+<p><a href="https://tio.run/##bZLPToMwHMfve4rSmAChFqcedFshO3jYaRdNSOYOhHVDxXWhjZkx8gQmXjzqe/g8ewEfAcufls4JLXy//fTb/kq4j59inuR3G3G8ZgtalkvCScAJcTjhOKebLE6o4zvYc2/7PoJHfei6IR8sHe6Ww1kPgBmAEKgLmWaOGryFBu6Mxnrof/xsYm0UtqwQaqy1xp7v@VBhJTvc9@QNW6ykiU9NrIzCRVF0excHlV@nVLZHWONWGVikVGgsDnAyvVmlau/OKBxNonE0hg2uzH56ojmqzPjPwSLzm3dGn/vy4uTsXDaIlIEGxhhbVYdVunrtp1scthiH@6VN2YMle4M7o/CIBSPGgqbyUS3qdG/ew0uWX8VJ6jgzwEWOAN1uaCLoAsxdQALwIlfIqAA55YAA@YuK3B3KsYStOcsoztjKqXNyAmpmkW6NENg/3@@7zw/5tMEA2LuvN1vmX91h@Qs" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/abrudz/QuadRS" rel="nofollow noreferrer">QuadR</a>, 9 bytes</h1>
+<p><em>Blatant rip-off of <a href="https://codegolf.stackexchange.com/questions/274389/reduce-a-string-up-to-idempotency#comment590875_274391">l4m2's golf</a> of <a href="https://codegolf.stackexchange.com/a/274391/43319">Arnauld's JavaScript solution</a> — go upvote!</em></p>
+<pre><code>(.+)\1
+\1
+</code></pre>
+<p><a href="https://tio.run/##KyxNTCn6/19DT1szxpArxvD/f64KrgogquRSVLTn0tbX1ucy1AZCIGkEJOvq6rhCMlKBKJerJCO1BEQn@4emZ3BFeEY4RjhyeULpiAouQ0sLA2MTIOLS09NTBGEYw57LPz9bEYjtuWzy7Wzy8@3@P@pcCAA" rel="nofollow noreferrer" title="QuadR – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu2" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands/2649a799300cbf3770e2db37ce177d4a19035a25" rel="nofollow noreferrer">05AB1E (legacy)</a>, 8 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>Δ.œ€ÔJéн
 </code></pre>
 <p><a href="https://tio.run/##ASMA3P8wNWFiMWX//86ULsWT4oKsw5RKw6nQvf//MTEuMCsxKzFlMQ" rel="nofollow noreferrer">Try it online</a> or <a href="https://tio.run/##MzBNTDJM/V9Waa@k8KhtkoKSfaXS/3NT9I5OftS05vAUr8MrL@z9r6QXpvM/WklJR6kChMFEJZBQVLQHktr62vpAylAbCMG0EZiuq6sDkiEZqUCUC2SVZKSWQFjJ/qHpGUA6wjPCMcIRyPCEsyJAZhtaWhgYmwARkK2np6cIwggmyEr//GxFIAYxbfLtbPLz7UDaDPUMQG5INVSKBQA" rel="nofollow noreferrer">verify all test cases</a>.</p>
@@ -46,12 +61,6 @@
           # (after the loop, the result is output implicitly)
 </code></pre>
 <p>Uses the <a href="https://github.com/Adriandmen/05AB1E/wiki/Commands/2649a799300cbf3770e2db37ce177d4a19035a25" rel="nofollow noreferrer">legacy version of 05AB1E</a> instead of the <a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">latest version</a>, since the connected uniquify builtin <code>Ô</code> will interpret stringified numbers as numbers instead of strings. E.g. with input <code>11.0+1+1e1</code>, the legacy program correctly connected uniqifies <code>[&quot;1&quot;,&quot;1&quot;,&quot;.0&quot;,&quot;+1&quot;,&quot;+1&quot;,&quot;e1&quot;]</code> to <code>[&quot;1&quot;,&quot;.0&quot;,&quot;+1&quot;,&quot;e1&quot;]</code> → <code>&quot;1.0+1e1&quot;</code>, whereas the new version of 05AB1E will connected uniquify <code>[&quot;1&quot;,&quot;1.0&quot;,&quot;+1&quot;,&quot;+1e1&quot;]</code> to <code>[&quot;1&quot;]</code> → <code>&quot;1&quot;</code>, since it interprets them all as the same number (<code>1</code>): <a href="https://tio.run/##ASMA3P9vc2FiaWX//86ULsWT4oKsw5RKw6nQvf//MTEuMCsxKzFlMQ" rel="nofollow noreferrer">try it online</a>.</p>
-</div>
-<div id="pu1" class="pu"><h1>JavaScript (ES6), 45 bytes</h1>
-
-<pre class="lang-javascript prettyprint-override"><code>f=s=&gt;s==(s=s.replace(/(.+)(?=\1)/,&quot;&quot;))?s:f(s)
-</code></pre>
-<p><a href="https://tio.run/##bZI9TsMwHMX3nsL1ElsJDgUGaOtEHRg6dQEpUukQpW4DhLqKLVSEyAmQWBjhHpynF@AIwfmw4wKJnbznn5/9d5S7@DEWSX67lUcbvmRluaKCBoJSJKggOdtmccKQj4iLUUhvBtj3IMQ4FMMVErgczXsAzAGEQF@ebRZeg3fQwp0x2Az9j59sbIzG/X4IDTbaYNd3faixlh0euOqGLdbSxic21kbjoii6vYs/lV@lTLUHWONWWVimTBos/@Bkdr1O9d6d0TiaRpNoAhtcmcP01HCvMpNfB4vsb94Zc@6L8@PTM9Wgpw20MCGkX3VYpavXYbrFYYtJeFjajN/3VW9wZzQe82DMedBUPq5Fne4temTF88s4SRGaAyFzD7DdliWSLcECAxqAZ7VCxiTImQAUqF9U5nikxhK@ETxjJONrVOfUBK@ZRbs1QuB8f73tP97V0wFD4Ow/Xx2Vf8Gj8gc" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
 
 <table id="st">
