--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240724T090030Z
+"   /golfscore                                      20240724T091425Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/269632.html">Implement the simplest functional programming la: 0269632</a>
 <a href="q/274348.html">Substring of Fizzbuzz                           : 0274348</a>
 <a href="q/274389.html">Reduce a string up to idempotency               : 0274389</a>
 <a href="q/274061.html">o y u (or and or)                               : 0274061</a>
