--- a/q/274348.html
+++ b/q/274348.html
@@ -26,10 +26,19 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>nan</td><td>Nibbles</td><td>240724T090030Z</td><td><a href="https://codegolf.stackexchange.com/questions/274348/substring-of-fizzbuzz/274395#274395">Dominic </a></td></tr>
-<tr d-ix="1"><td>1275</td><td>Vyxal</td><td>240723T104002Z</td><td><a href="https://codegolf.stackexchange.com/questions/274348/substring-of-fizzbuzz/274349#274349">lyxal</a></td></tr>
+<tr d-ix="0"><td>019</td><td>JCram</td><td>240724T094205Z</td><td><a href="https://codegolf.stackexchange.com/questions/274348/substring-of-fizzbuzz/274398#274398">Kamila S</a></td></tr>
+<tr d-ix="1"><td>nan</td><td>Nibbles</td><td>240724T090030Z</td><td><a href="https://codegolf.stackexchange.com/questions/274348/substring-of-fizzbuzz/274395#274395">Dominic </a></td></tr>
+<tr d-ix="2"><td>1275</td><td>Vyxal</td><td>240723T104002Z</td><td><a href="https://codegolf.stackexchange.com/questions/274348/substring-of-fizzbuzz/274349#274349">lyxal</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="http://golfscript.com/nibbles/index.html" rel="nofollow noreferrer">Nibbles</a>, 49 nibbles (24.5 bytes)</h1>
+<div id="pu0" class="pu"><h2><a href="https://palaiologos.rocks/jcram/jcram.html" rel="nofollow noreferrer">JCram</a>, 19 bytes (SBCS).</h2>
+<pre><code>Ⓓπ:²⍤Su⍙⍳≠En←∫v⁶FⒿV
+</code></pre>
+<p>Encodes the following ES6 program:</p>
+<pre><code>n=&gt;{for(s='',i=0;++i&lt;10**n.length;s+=(i%5?f||i:f+'Buzz'))f=i%3?'':'Fizz';return s.includes(n)}
+</code></pre>
+<p>Uses a similar idea to Dominic van Essen's answer.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="http://golfscript.com/nibbles/index.html" rel="nofollow noreferrer">Nibbles</a>, 49 nibbles (24.5 bytes)</h1>
 <pre><code>&lt;&lt;`% +.,^~+,$~ or:^-~%$3&quot;Fizz&quot;^-~%$5&quot;Buzz&quot;@
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m708LzMpKSe1eMGCpaUlaboWN7VsbBJUFbT1dOLqtI3rFPKLrOJ061RVjJXcMquqlMBsUyWnUiDbAaIDqnFLtFIMWI2hsaEJiI5RUoqFygEA" rel="nofollow noreferrer">Attempt a version of this Online!</a></p>
@@ -65,7 +74,7 @@ This doesn't use implicit variables, so can end-up 1-nibble shorter as part of a
 &lt;&lt;                                           # and discard the last element.
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 102 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="nofollow noreferrer">bits<sup>v2</a></sup>, 12.75 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 102 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="nofollow noreferrer">bits<sup>v2</a></sup>, 12.75 bytes</h1>
 <pre><code>L↵↵ƛ₍₃₅kF½*∑∴;ṅ$c
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyI9IiwiIiwiTOKGteKGtcab4oKN4oKD4oKFa0bCvSriiJHiiLQ74bmFJGMiLCIiLCJ6Il0=" rel="nofollow noreferrer">Try it Online!</a></p>
